<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:paddingTop="12dp"
	android:paddingBottom="12dp"
	android:paddingRight="12dp"
	android:paddingLeft="12dp"
	tools:context="kiwi.mobile.assign2.AddProductActivity">

	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<TableRow>
			<TextView
				android:id="@+id/label_name"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/label_name"
				android:textSize="14sp"/>
			<EditText
				android:id="@+id/field_name"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:text="@string/field_name_default"
				android:textSize="14sp"/>
		</TableRow>

		<TableRow>
			<TextView
				android:id="@+id/label_price"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/label_price_cad"
				android:textSize="14sp"/>
			<EditText
				android:id="@+id/field_price"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:inputType="numberDecimal"
				android:text="@string/field_price_default"
				android:textSize="14sp"/>
		</TableRow>

		<TableRow
			android:layout_weight="1">
			<TextView
				android:id="@+id/label_desc"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/label_desc"
				android:textSize="14sp"/>
			<EditText
				android:id="@+id/field_desc"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:text="@string/field_desc_default"
				android:textSize="14sp"/>
		</TableRow>
	</TableLayout>

	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button
			android:id="@+id/cancel_button"
			android:layout_weight=".5"
			android:text="@string/cancel"/>
		<Button
			android:id="@+id/save_button"
			android:layout_weight=".5"
			android:text="@string/save"/>
	</TableRow>

</LinearLayout>
