<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/container"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:paddingTop="12dp"
	android:paddingBottom="12dp"
	android:paddingRight="12dp"
	android:paddingLeft="12dp"
	tools:context="kiwi.mobile.assign2.BrowseActivity">

	<TableRow>
		<TextView
			android:id="@+id/label_name"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/label_name"
			android:textStyle="bold"
			android:textSize="14sp"/>
		<TextView
			android:id="@+id/view_name"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textSize="14sp"/>
	</TableRow>

	<TableRow>
		<TextView
			android:id="@+id/label_price_cad"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/label_price_cad"
			android:textStyle="bold"
			android:textSize="14sp"/>
		<TextView
			android:id="@+id/view_price_cad"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textSize="14sp"/>
	</TableRow>

	<TableRow>
		<TextView
			android:id="@+id/label_price_btc"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/label_price_btc"
			android:textStyle="bold"
			android:textSize="14sp"/>
		<TextView
			android:id="@+id/view_price_btc"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textSize="14sp"/>
	</TableRow>

	<TableRow
		android:layout_weight="1">
		<TextView
			android:id="@+id/label_desc"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/label_desc"
			android:textStyle="bold"
			android:textSize="14sp"/>
		<TextView
			android:id="@+id/view_desc"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textSize="14sp"/>
	</TableRow>

	<TableRow>
		<Button
			android:id="@+id/prev_button"
			android:layout_weight=".2"
			android:text="@string/prev"/>
		<Button
			android:id="@+id/delete_button"
			android:layout_weight=".6"
			android:text="@string/delete"/>
		<Button
			android:id="@+id/next_button"
			android:layout_weight=".2"
			android:text="@string/next"/>
	</TableRow>

</TableLayout>
